--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.client">
+    package="com.example.app">
    <application
-        android:label="client"
+        android:label="See Food"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
