--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
