--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   camera: ^0.10.5+9
   path_provider: ^2.1.2
   path: ^1.9.0
+  dart_openai: ^5.0.0
 
 dev_dependencies:
   flutter_test:
