--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.9.0
   dart_openai: ^5.0.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
