--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -29,4 +29,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/land_back.png
+    - assets/brutus_buckeye.jpeg
     # - assets/offers/
